--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solidgoldpig/fb-utils-node",
-  "version": "0.1.1",
+  "version": "0.1.6",
   "description": "Form Builder utility methods",
   "main": "index.js",
   "scripts": {
@@ -13,10 +13,11 @@
     "test:unit": "multi-tape lib/**/*.unit.spec.js"
   },
   "devDependencies": {
-    "@solidgoldpig/solidgoldpig-eslint-config": "^1.0.0",
-    "multi-tape": "^1.2.0",
-    "npm-run-all": "^4.1.3",
-    "tape": "^4.9.1",
+    "@solidgoldpig/solidgoldpig-eslint-config": "^1.1.3",
+    "multi-tape": "^1.2.1",
+    "npm-run-all": "^4.1.5",
+    "proxyquire": "^2.1.0",
+    "tape": "^4.10.2",
     "test-console": "^1.1.0"
   },
   "repository": {
@@ -24,5 +25,8 @@
     "url": "https://github.com/solidgoldpig/fb-utils-node.git"
   },
   "author": "github@alex.solidgoldpig.com",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "sinon": "^7.3.2"
+  }
 }
